# yedit

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
docker/: dev.Dockerfile  prod.Dockerfile
src/: main.rs
src/app/: mod.rs  model.rs
src/models/: id.rs  message.rs
